	* Gamelist: show delete-flag to the very left of the list by default
	* Replace some buttons in help by proper img tags
	* Comment editor now opens by clicking the comment in game info area
	* Bring Best games / tree graph to front if they exist and the button is pressed again
	* Toggle autoplay mode was mapped to Ctrl-z instead of Ctrl-Z so it confliced with undo
- New features:
	* Correspondence Chess:
		- Allow observation of games on ICCF webchess
		- Add connector file support to configure game relay from the internet
		- Make dialogues etc. theme aware for Tk 8.5
		- Allow for postal games by the Mode "Postal" header. Those
		  games are not touched but show up in the cc window provided a
		  suitable PGN is present in the Inbox. (ICCF might generate this
		  in case of mixed events.)
		- Add two new headers: WhiteAddress / BlackAddress to hold
		  postal adresses for eventual postcard printing
		- Read additional header tags from the database and thus allow
		  to show e.g. flags if Black/WhiteCountry header is set even if
		  those tags are not provided by the games in the Inbox
		- Rewrite of some parts of the update procedure
		- Code cleanup and performance improvements
	* Update board in comment editor with current position while the comment editor is left open. (Joost t' Haart)
	* Show WhiteCountry/BlackCountry in game info area
	* Initial support for bibliographic links in PGN headers:
		- A BibTeX-file either named $scidDataDir/Bookshelf.bib or named and located along with the current database is parsed as bibliographic input
		- Header lines of the form [Bib "<bibtexkey>, <addinfo> ; <bibtexkey>, <addinfo>"]
		  open a new window with bibliographic reference; <addinfo> e.g. No.27 p.85.
		- if Bib-header exists a new link shows up in game info area
		- To handle the bibliographic database 3rd party tools can be
		  used. A valuabe free, open source  solution might be
		  http://jabref.sf.net (or any other bibliography tool for BibTeX)